[package]
name = "langues-rust-api"
version = "0.1.0"
authors = ["jmarzin <jacques.marzin@free.fr>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.15"
rocket_cors = "0.5.0-beta-2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "postgres_pool"]